--- a/SvelteRazor/SvelteRazor.csproj
+++ b/SvelteRazor/SvelteRazor.csproj
@@ -1,17 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
-
-    <Target Name="Rollup" BeforeTargets="Build">
-        <Exec Command="npm run build" />
-    </Target>
+        <Target Name="Rollup" BeforeTargets="Build">
+            <Exec Command="yarn rollup" />
+        </Target>
     <ItemGroup>
-        <Watch Include="wwwroot\**\*.svelte" />
-        <Watch Include="**\*.config.json" />
+        <Watch Include="wwwroot/js/*.svelte"/>
+        <Watch Include="**\*.config.json"/>
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="CodeMechanic.RazorHAT" Version="1.0.8" />
+        <PackageReference Include="CodeMechanic.RazorHAT" Version="1.0.8"/>
     </ItemGroup>
 </Project>
