--- a/SvelteRazor/package.json
+++ b/SvelteRazor/package.json
@@ -2,8 +2,9 @@
   "name": "SvelteRazor",
   "version": "1.0.0",
   "scripts": {
-    "build": "npm i && rollup -c rollup.config.js",
-    "dev": "dotnet watch run --launch-profile hotreloadprofile --urls http://127.1.1.0:8080"
+    "build": "yarn && npm i && dotnet build -v q && build:svelte",
+    "dev": "dotnet watch run --launch-profile hotreloadprofile --urls http://127.1.1.0:8080",
+    "build:svelte": "rollup -c rollup.config.js"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
