--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 **/*/out/
+out
 wwwroot/lib
 # User-specific files
 *.rsuser
