--- a/SvelteRazor.csproj
+++ b/SvelteRazor.csproj
@@ -3,15 +3,17 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
     </PropertyGroup>
-    <Target Name="Rollup" BeforeTargets="Build">
-        <Exec Command="yarn build:svelte" />
-    </Target>
+<!--    <Target Name="Rollup" BeforeTargets="Build">-->
+<!--        <Exec Command="yarn build:svelte" />-->
+<!--    </Target>-->
     <ItemGroup>
         <Watch Include="wwwroot/js/*.svelte" />
         <Watch Include="**\*.config.json" />
-        <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*" />
+<!--        <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*" />-->
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="CodeMechanic.RazorHAT" Version="1.0.8" />
+        <PackageReference Include="CodeMechanic.Types" Version="1.0.7" />
+        <PackageReference Include="CodeMechanic.Regex" Version="1.0.2" />
     </ItemGroup>
 </Project>
