added some preprocessing support it won't work yet, just needs to be in the right place when tailwind compiles and .svelte files need to see the compiled styles.css file

--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "scripts": {
     "build": "yarn && dotnet build -v q && yarn build:svelte",
     "dev": "dotnet watch run --launch-profile hotreloadprofile --urls http://127.1.1.0:8001",
-    "build:svelte": "rollup -c rollup.config.mjs"
+    "build:svelte": "rollup -c rollup.config.mjs",
+    "buildcss:linux": "npx tailwindcss -i ./Styles/app.css -o ./wwwroot/css/site.css"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
     "rollup": "^2.39.0",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.32.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.3.6"
+  },
+  "dependencies": {
+    "@sveltejs/adapter-auto": "^3.1.1"
   }
 }
