--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "tailwindcss": "^3.3.6"
   },
   "dependencies": {
-    "@sveltejs/adapter-auto": "^3.1.1"
+    "@sveltejs/adapter-auto": "^3.1.1",
+    "chartjs": "^0.3.24",
+    "htmx.org": "^1.9.10"
   }
 }
