--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
     "build": "yarn && dotnet build -v q && yarn build:svelte",
     "dev": "dotnet watch run --launch-profile hotreloadprofile --urls http://127.1.1.0:8001",
     "build:svelte": "rollup -c rollup.config.mjs",
+    "nuke": "rm -rf node_modules wwwroot/lib wwwroot/css bin obj",
     "buildcss:linux": "npx tailwindcss -i ./Styles/app.css -o ./wwwroot/css/site.css"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "rollup": "^2.39.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "svelte": "^3.32.3",
-    "tailwindcss": "^3.3.6"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "postcss-load-config": "^5.0.3",
+    "rollup": "^4.12.0",
+    "rollup-plugin-svelte": "^7.1.6",
+    "svelte": "^4.2.11",
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "@sveltejs/adapter-auto": "^3.1.1",
