--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SvelteRazor",
+  "name": "Trash Stack",
   "version": "1.0.0",
   "scripts": {
     "build": "yarn && dotnet build -v q && yarn build:svelte",
