--- a/TrashStack.csproj
+++ b/TrashStack.csproj
@@ -11,10 +11,17 @@
         <Watch Include="wwwroot/js/*.svelte" />
         <Watch Include="**\*.rest" />
         <Watch Include="**\*.config.json" />
+        <Watch Include="**\*.rest" />
+        <Watch Include="**\*.env" />
         <!--        match svelte js files-->
         <!--        <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*"/>-->
     </ItemGroup>
+    
     <ItemGroup>
+        <EmbeddedResource Include="**\*.rest"></EmbeddedResource>
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="CodeMechanic.FileSystem" Version="1.0.7" />
         <PackageReference Include="CodeMechanic.RazorHAT" Version="1.0.8" />
         <PackageReference Include="CodeMechanic.Types" Version="1.0.7" />
         <PackageReference Include="CodeMechanic.Regex" Version="1.0.2" />
